Use a lighter color for active cues and annotation rows to fix contrast

--- a/src/components/MarkersDisplay/MarkersDisplay.scss
+++ b/src/components/MarkersDisplay/MarkersDisplay.scss
@@ -220,7 +220,7 @@
     padding: 10px;
 
     &.active {
-      background-color: $primaryLight;
+      background-color: $primaryLighter;
     }
 
     &:hover {
